<resources>
    <string name="app_name">Jenis Kucing</string>
    <string name="about">About</string>
    <string name="cat_deskribtion">Deskribsi Kucing</string>
    <string name="cat_names">Nama Kucing</string>
    <string name="about_description">I am a final semester student who is interested in technology, therefore I study and focus myself on learning about technologies such as artificial intelligence, android programming, web programming, and cloud computing. and I like to share about things that smell of technology</string>
    <string name="about_name">Trio Agung Purwanto</string>
    <string name="btn_back">Kembali</string>
    <string name="cat_detail">Detail Kucing</string>
    <string name="share">Share</string>
    <string name="about_email">(ipunka37@gmail.com)</string>
    <string name="cat_caracter">Karakter Kucing</string>
    <string-array name="data_name">
        <item>Whiskers</item>
        <item>Mittens</item>
        <item>Fluffy</item>
        <item>Simba</item>
        <item>Luna</item>
        <item>Socks</item>
        <item>Tiger</item>
        <item>Oliver</item>
        <item>Milo</item>
        <item>Leo</item>
        <item>Shadow</item>
        <item>Garfield</item>
        <item>Tom</item>
        <item>Nala</item>
        <item>Snowball</item>
        <item>Boots</item>
        <item>Sammy</item>
        <item>Smokey</item>
        <item>Max</item>
    </string-array>
    <string-array name="data_description">
        <item>Whiskers adalah salah satu kucing yang populer di kalangan pecinta hewan peliharaan. Nama Whiskers berasal dari kumisnya yang panjang dan tebal yang menjadi ciri khasnya. Kucing jenis ini biasanya berwarna hitam atau abu-abu, dan memiliki kepribadian yang lembut dan penyayang. Whiskers sering menjadi pilihan bagi mereka yang mencari kucing yang ramah dan mudah dirawat. Whiskers dapat hidup hingga 15 tahun dan membutuhkan perawatan yang relatif mudah, seperti menjaga kebersihan bulu dan memberikan makanan berkualitas tinggi. Whiskers juga dikenal sebagai kucing yang cerdas dan mudah dilatih untuk melakukan trik-trik sederhana, seperti bermain bola atau memanjat pohon kecil.</item>
        <item>Mittens adalah kucing yang memiliki ciri khas sepasang sarung tangan putih di kaki depannya. Kucing jenis ini biasanya berwarna hitam atau coklat, dan memiliki kepribadian yang aktif dan berani. Mittens sering menjadi pilihan bagi mereka yang mencari kucing yang bersahabat dan ramah terhadap anak-anak. Mittens juga memiliki kecerdasan yang tinggi dan dapat dengan mudah dilatih untuk melakukan trik-trik, seperti membawa mainan atau memanjat pohon kecil. Mittens membutuhkan perawatan yang relatif mudah, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya. Mittens dapat hidup hingga 15 tahun dan akan menjadi teman setia bagi siapa saja yang merawatnya dengan penuh kasih sayang.</item>
        <item>Fluffy adalah kucing yang memiliki bulu yang tebal dan lembut sehingga cocok dijadikan sebagai kucing peliharaan. Kucing jenis ini biasanya memiliki warna bulu yang beraneka ragam seperti putih, hitam, atau oranye. Fluffy dikenal sebagai kucing yang lembut dan penyayang, sehingga sering menjadi pilihan bagi mereka yang ingin memelihara kucing untuk dijadikan teman sehari-hari. Fluffy membutuhkan perawatan yang cukup intensif seperti menyikat bulu secara teratur dan menjaga kebersihan kucing.</item>
        <item>Simba adalah kucing yang terkenal karena kemiripannya dengan karakter dari film The Lion King. Kucing jenis ini biasanya berwarna coklat atau coklat keemasan, dan memiliki kepribadian yang tenang dan santai. Simba sering menjadi pilihan bagi mereka yang mencari kucing yang mudah dirawat dan tidak terlalu aktif. Simba membutuhkan perawatan yang cukup sederhana, seperti menjaga kebersihan bulu dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Luna adalah kucing yang memiliki kecantikan yang khas dan warna bulu yang menarik perhatian. Kucing jenis ini biasanya berwarna abu-abu atau putih, dan memiliki kepribadian yang ramah dan penyayang. Luna sering menjadi pilihan bagi mereka yang mencari kucing yang mudah dirawat dan bersahabat dengan anak-anak. Luna membutuhkan perawatan yang relatif mudah, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya</item>
        <item>Socks adalah kucing yang memiliki ciri khas sepasang kaki putih yang mirip dengan kaos kaki. Kucing jenis ini biasanya memiliki warna bulu yang beraneka ragam seperti coklat atau hitam. Socks dikenal sebagai kucing yang cerdas dan mudah dilatih untuk melakukan trik-trik sederhana, seperti membawa mainan atau memanjat pohon kecil. Socks membutuhkan perawatan yang cukup sederhana, seperti menjaga kebersihan bulu dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya. Socks juga dikenal sebagai kucing yang ramah dan akan menjadi teman setia bagi siapa saja yang merawatnya dengan penuh kasih sayang.</item>
        <item>Tiger adalah kucing yang memiliki ciri khas garis-garis hitam dan putih pada bulunya, menyerupai motif pada kulit harimau. Kucing jenis ini biasanya memiliki kepribadian yang aktif dan enerjik, dan cocok untuk dimiliki oleh mereka yang mencari kucing yang suka bermain dan beraktivitas. Tiger membutuhkan perawatan yang cukup intensif, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Oliver adalah kucing yang terkenal karena kecantikan dan kelembutannya. Kucing jenis ini biasanya berwarna oranye atau coklat, dan memiliki kepribadian yang penyayang dan lembut. Oliver sering menjadi pilihan bagi mereka yang mencari kucing yang mudah dirawat dan bersahabat dengan anak-anak. Oliver membutuhkan perawatan yang cukup sederhana, seperti menyikat bulu secara teratur dan menjaga kebersihan kucing.</item>
        <item>Milo adalah kucing yang memiliki kepribadian yang ramah dan menyenangkan. Kucing jenis ini biasanya berwarna putih atau coklat, dan memiliki bulu yang lembut dan tebal. Milo sering menjadi pilihan bagi mereka yang mencari kucing yang mudah dirawat dan bersahabat dengan anak-anak. Milo membutuhkan perawatan yang relatif mudah, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Leo adalah kucing yang terkenal karena kecantikan dan kecerdasannya. Kucing jenis ini biasanya berwarna oranye atau coklat, dan memiliki bulu yang lebat dan tebal. Leo dikenal sebagai kucing yang cerdas dan mudah dilatih untuk melakukan trik-trik, seperti membawa mainan atau memanjat pohon kecil. Leo membutuhkan perawatan yang cukup intensif, seperti menyikat bulu secara teratur dan menjaga kebersihan kucing.</item>
        <item>Shadow adalah kucing yang dikenal karena kecerdasannya dan kepribadiannya yang independen. Kucing jenis ini biasanya berwarna hitam atau coklat tua, dan memiliki bulu yang lembut dan tebal. Shadow sering menjadi pilihan bagi mereka yang mencari kucing yang independen dan tidak terlalu memerlukan perhatian yang terlalu banyak. Shadow membutuhkan perawatan yang cukup sederhana, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Garfield adalah kucing yang terkenal karena menjadi karakter utama dalam serial komik Garfield. Kucing jenis ini biasanya berwarna oranye dan putih, dan memiliki kepribadian yang gemar makan dan suka bersantai. Garfield sering menjadi pilihan bagi mereka yang mencari kucing yang lucu dan menggemaskan, serta mudah dirawat. Garfield membutuhkan perawatan yang cukup sederhana, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Tom adalah kucing yang terkenal karena menjadi karakter utama dalam serial kartun Tom and Jerry. Kucing jenis ini biasanya berwarna abu-abu dan putih, dan memiliki kepribadian yang cerdas dan tangguh. Tom sering menjadi pilihan bagi mereka yang mencari kucing yang aktif dan mudah dilatih untuk melakukan trik-trik sederhana. Tom membutuhkan perawatan yang cukup sederhana, seperti menjaga kebersihan bulu dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Nala adalah kucing yang terkenal karena menjadi karakter utama dalam film The Lion King. Kucing jenis ini biasanya berwarna coklat atau coklat keemasan, dan memiliki kepribadian yang cerdas dan berani. Nala sering menjadi pilihan bagi mereka yang mencari kucing yang tangguh dan mudah beradaptasi dengan lingkungan baru. Nala membutuhkan perawatan yang relatif mudah, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Snowball adalah kucing yang memiliki ciri khas warna bulu putih yang bersih dan lembut. Kucing jenis ini biasanya memiliki kepribadian yang lembut dan penyayang, serta mudah bersosialisasi dengan manusia dan hewan lainnya. Snowball sering menjadi pilihan bagi mereka yang mencari kucing yang lucu dan menggemaskan. Snowball membutuhkan perawatan yang cukup sederhana, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Boots adalah kucing yang terkenal karena ciri khas sepasang kaki berwarna putih yang mirip dengan sepatu boot. Kucing jenis ini biasanya memiliki warna bulu beraneka ragam, seperti oranye atau coklat. Boots memiliki kepribadian yang aktif dan lucu, serta mudah dilatih untuk melakukan trik-trik sederhana. Boots sering menjadi pilihan bagi mereka yang mencari kucing yang menggemaskan dan cerdas. Boots membutuhkan perawatan yang cukup sederhana, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Sammy adalah kucing yang memiliki kepribadian yang tenang dan penyayang. Kucing jenis ini biasanya berwarna abu-abu atau hitam, dan sering menjadi pilihan bagi mereka yang mencari kucing yang mudah dirawat dan cocok sebagai teman sehari-hari. Sammy membutuhkan perawatan yang cukup sederhana, seperti menyikat bulu secara teratur dan memberikan makanan berkualitas tinggi untuk menjaga kesehatannya.</item>
        <item>Smokey adalah seekor kucing jantan dengan bulu abu-abu yang lembut. Dia sangat pintar dan lincah, suka bermain dengan mainan yang digeleng-gelengkan. Smokey juga sangat ramah dan senang bersosialisasi dengan manusia maupun hewan peliharaan lainnya.</item>
        <item>Max adalah kucing betina dengan bulu putih berkilau dan mata biru yang mempesona. Dia sangat manja dan selalu mencari perhatian dari pemiliknya. Max juga sangat penyayang dan senang dielus-elus. Dia suka bermain dengan bola dan menghabiskan waktu berjemur di bawah sinar matahari di atas jendela.</item>
    </string-array>
</resources>